--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,13 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/spring_boot_upload?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.file-size-threshold=2KB
+
+
+spring.datasource.url= jdbc:mysql://localhost:3306/spring_boot_upload
 spring.datasource.username= root
 spring.datasource.password= root
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
 spring.jpa.hibernate.ddl-auto = update
 
 
-spring.servlet.multipart.enabled=true
-
-# Threshold after which files are written to disk.
-spring.servlet.multipart.file-size-threshold=2KB
-# Max file size.
-spring.servlet.multipart.max-file-size=200MB
-# Max Request Size
-spring.servlet.multipart.max-request-size=215MB
